--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: GoogleShare4R
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Google File Downloader Using Share Link
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Taekyung Kim
+Maintainer: Taekyung Kim <tk_kim@khu.ac.kr>
+Description: Download files from Google Drive using share link.
+License: MIT
 Encoding: UTF-8
 LazyData: true
+Depends: R,
+    readr,
+    googledrive,
+    readxl
+Imports: googledrive,
+    readr,
+    readxl
